@@ -1,3 +1,4 @@
+1/6/14 show zoom buttons only for Linear scale
 1/6/14 wire up log graph to display quantity (moles)
 1/6/14 add minor tick marks to graph, add options
 1/6/14 move graph indicators when concentrations change
